[desktop] '--add-opens=java.desktop/javax.swing=ALL-UNNAMED' (jdk17)